# cs423-color-segmentation

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
.cursor/rules/: project-rules.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.husky/: pre-push
configs/profiles/v1/: multi-color-template.json  red-segmentation.json
data/real/metadata/: dataset.template.json
data/sample/metadata/: dataset.json
data/sample/raw/: dim_red_object.ppm  two_red_objects.ppm
docs/: ai-tooling.md  dataset-collection-guide.md
docs/superpowers/plans/: 2026-04-23-edge-refinement.md
docs/superpowers/specs/: 2026-04-23-edge-refinement-design.md
docs/team-notes/: 02-projede-ne-yaptim.md  03-ekipten-ne-bekliyorum.md
scripts/: smoke_test.py  validate_push.sh
src/cs423_segmentation/: __init__.py  __main__.py  cli.py  color.py  counting.py  dataset.py  evaluation.py  io_utils.py  morphology.py  pipeline.py  reporting.py  tuning.py  visualization.py
team-notes/: 01-projeye-baslamadan-once-ne-kurdum.md  03-ekipten-ne-bekliyorum.md
tests/: test_cli.py  test_color.py  test_dataset.py  test_morphology_and_pipeline.py  test_reporting.py  test_tuning.py
